# ROS-Causal_HRISim

./: .gitignore  README.md  build_run_docker.sh  build_run_robot_docker.sh  note.sh  run_docker.sh  run_robot_docker.sh
HRISim/hrisim_actions/: generateRandomGoal.py  goto.py  moveArm.py  moveHead.py  moveTorso.py  randomPointFromPolygon.py  record.py  record_sim.py
HRISim/hrisim_conditions/: HasHumanArrived.py  HasRobotArrived.py
HRISim/hrisim_gazebo/: CMakeLists.txt
HRISim/hrisim_gazebo/include/: ActorPlugin.hh
HRISim/hrisim_gazebo/launch/: simulation.launch
HRISim/hrisim_pedsim/: CMakeLists.txt  package.xml
HRISim/hrisim_pedsim/launch/: gazebo_plugin.launch  mysimulator.launch  simple_pedestrians.launch
HRISim/hrisim_pedsim/modified_scripts/: AgentState.msg  CMakeLists.txt  agent.cpp  config.h  sim_visualizer.cpp  simulate_diff_drive_ped.cpp  simulator.cpp  spawn_pedsim_agents.py
HRISim/hrisim_pedsim/scenarios/: multi_agent_avoidance.xml  warehouse.xml
HRISim/hrisim_plans/: PassByTheCentre_wHumanGoal_norec.py  Thor.py  Thor_sim.py
HRISim/hrisim_recording/: CMakeLists.txt  package.xml
HRISim/hrisim_recording/launch/: recording.launch
HRISim/hrisim_risk/: CMakeLists.txt  package.xml
HRISim/hrisim_risk/launch/: risk.launch
HRISim/hrisim_risk/msg/: Risk.msg
HRISim/hrisim_risk/scripts/: risk.py
HRISim/hrisim_rviz/: CMakeLists.txt  package.xml
HRISim/hrisim_rviz/launch/: visualisation_rviz.launch
HRISim/hrisim_rviz/scripts/: linegoal_visualiser.py
HRISim/hrisim_tmule/: CMakeLists.txt  package.xml
HRISim/hrisim_tmule/tmule/: tiago.yaml  tiago_sim.yaml
HRISim/hrisim_twist_mux/: CMakeLists.txt  package.xml
HRISim/hrisim_twist_mux/scripts/: mytwist_mux.py
HRISim/scripts/: connect_tiago.sh
hrisim_docker/: Dockerfile  entrypoint.sh  robot_entrypoint.sh  tiago_controller_conf_package.xml
myTIAGo/mytiago_causal_discovery/: CMakeLists.txt
myTIAGo/mytiago_causal_discovery/launch/: causal_discovery.launch  data_collection.launch
myTIAGo/mytiago_causal_discovery/scripts/: causal_discovery.py  collecting_data.py
myTIAGo/mytiago_gazebo/worlds/: simple_world.world  simple_world_wH.world
myTIAGo/mytiago_human/: CMakeLists.txt  package.xml
myTIAGo/mytiago_pedsim/: package.xml
myTIAGo/mytiago_plans/: PassByTheCentre.py  PassByTheCentre_wHumanGoal.py  RobotOff.py
myTIAGo/mytiago_recording/: package.xml
myTIAGo/mytiago_robot/: CMakeLists.txt  package.xml
myTIAGo/mytiago_rviz/: package.xml
myTIAGo/mytiago_twist_mux/: CMakeLists.txt  package.xml
myTIAGo/tscausaldisco/: CMakeLists.txt  package.xml
mytiago_actions/: generateRandomGoal.py  goto.py  record.py
mytiago_causal_discovery/: CMakeLists.txt  package.xml
mytiago_causal_discovery/launch/: causal_discovery.launch  data_collection.launch
mytiago_causal_discovery/msg/: CausalModel.msg
mytiago_causal_discovery/postprocess_scripts/: postprocess.py
mytiago_causal_discovery/scripts/: causal_analysis.py  causal_discovery.py  causal_model.py  collecting_data.py
mytiago_conditions/: HasHumanArrived.py
mytiago_gazebo/: CMakeLists.txt  package.xml
mytiago_gazebo/launch/: simulation.launch  tiago_spawn.launch
mytiago_gazebo/modified_scripts/: local_planner.yaml
mytiago_gazebo/src/: ActorPlugin.cc
mytiago_gazebo/worlds/: maze.world  maze_corridor_withTurn.world  maze_wH.world  supermarket.world
mytiago_navigation/: CMakeLists.txt  package.xml
mytiago_pedestrian/: CMakeLists.txt  package.xml
mytiago_pedestrian/scripts/: keyboard_teleop.py
mytiago_pedsim/: CMakeLists.txt  package.xml  run_pedsim.sh  simulator.cpp
mytiago_pedsim/launch/: mysimulator.launch  mysimulator2.launch  simple_pedestrians.launch  simulator.launch  single_agent_avoidance.launch
mytiago_pedsim/modified_scripts/: CMakeLists.txt  actor_model.sdf  keyboard_teleop.py  keyboard_teleop_new.py  simulate_diff_drive_ped.cpp  simulator.cpp  spawn_pedsim_agents.py
mytiago_pedsim/modified_scripts/attempts/: agent_attempt.cpp  config.h  simulator_attempt.cpp  utilities.h
mytiago_pedsim/scenarios/: single_agent_avoidance.xml  social_contexts.xml
mytiago_pedsim/src/: actor_poses_plugin.cpp
mytiago_pedsim/worlds/: single_agent_avoidance.world
mytiago_plans/: PassByTheCentre.py  PassByTheCentre_wHumanGoal_norec.py  SetInitPos.py
mytiago_recording/: CMakeLists.txt
mytiago_recording/launch/: recording.launch
mytiago_risk/: CMakeLists.txt  package.xml
mytiago_risk/launch/: risk.launch
mytiago_risk/msg/: Risk.msg
mytiago_risk/scripts/: risk.py
mytiago_rviz/: CMakeLists.txt
mytiago_rviz/launch/: distance_rviz.launch  visualisation_rviz.launch
mytiago_rviz/scripts/: distance_visualiser.py  goal_visualiser.py  risk_visualiser.py
mytiago_tmule/: CMakeLists.txt  package.xml
mytiago_tmule/tmule/: launch_all.yaml  tiago.yaml  tiago_sim copy.yaml  tiago_sim.yaml
mytiago_twist_mux/modified_scripts/: twist_mux.launch
tiago_docker/: Dockerfile  entrypoint.sh  robot_entrypoint.sh
utilities_ws/src/bag_postprocess_bringup/: CMakeLists.txt  package.xml  tmp.py
utilities_ws/src/bag_postprocess_bringup/csv_manager/: add_goalID.py  add_interp.py  convert_time.py
utilities_ws/src/bag_postprocess_bringup/launch/: extract_Agent.launch  extract_Goal.launch  extract_ID.launch  extract_goal.launch  extract_goal_bringup.launch  extract_traj.launch  extract_traj_bringup.launch  postprocess_bringup.launch
utilities_ws/src/bag_postprocess_bringup/rviz/: tiago_rviz.rviz  tiago_rviz_wGoal.rviz  tiago_rviz_wGoalID.rviz
utilities_ws/src/bag_postprocess_bringup/utils/: csv_manager.py
utilities_ws/src/rviz_visualisation/: CMakeLists.txt  package.xml
utilities_ws/src/rviz_visualisation/scripts/: goal_dot_visualiser.py  goal_id_visualiser.py  goal_visualiser.py  risk_visualiser.py
utilities_ws/src/tiago_people_tracker/tiago_tracker_bringup/: CMakeLists.txt  package.xml
utilities_ws/src/tiago_people_tracker/tiago_tracker_bringup/config/: detectors.yaml
utilities_ws/src/tiago_people_tracker/tiago_tracker_bringup/launch/: tiago_tracker.launch  tiago_tracker.rviz
(+118 files in other folders)
